[package]
name = "launchdarkly-sdk-transport"
version = "0.0.1"
edition = "2024"
rust-version = "1.91.0"
description = "Generic transport trait and optional implementations for use across LaunchDarkly Rust libraries"
repository = "https://github.com/launchdarkly/rust-sdk-transport"
authors = ["LaunchDarkly"]
license = "Apache-2.0"
keywords = ["launchdarkly", "feature-flags", "feature-toggles", "transport", "http"]

[dependencies]
bytes = "1.11.1"
futures = "0.3.31"
http = "1.4.0"
