[package]
name = "launchdarkly-sdk-transport"
version = "0.0.1"
edition = "2024"
rust-version = "1.91.0"
description = "Generic transport trait and optional implementations for use across LaunchDarkly Rust libraries"
repository = "https://github.com/launchdarkly/rust-sdk-transport"
authors = ["LaunchDarkly"]
license = "Apache-2.0"
keywords = ["launchdarkly", "feature-flags", "feature-toggles", "transport", "http"]

[dependencies]
bytes = "1.11.1"
futures = "0.3.31"
http = "1.4.0"
log = "0.4.29"

#
# Dependencies for hyper transport
#
hyper = { version = "1.0", features = ["client", "http1", "http2"], optional = true }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "tokio"], optional = true }
http-body-util = { version = "0.1", optional = true }
hyper-http-proxy = { version = "1.1.0", default-features = false, optional = true }
hyper-timeout = { version = "0.5", optional = true }
tower = { version = "0.4", optional = true }
no-proxy = { version = "0.3.6", default-features = false, optional = true }

hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "ring", "tls12"], optional = true }
hyper-tls = { version = "0.6.0", optional = true }
# Pin to 0.2.15: 0.2.16+ added Protocol::Tlsv13 but the OpenSSL fallback doesn't handle it (upstream bug).
native-tls = { version = "=0.2.15", optional = true }

[features]
# Default: No features enabled, providing only the HttpTransport trait.
# Users can implement their own transport or enable built-in implementations below.
default = []

# hyper: Enable hyper v1 HTTP client implementation (HTTP-only).
# Includes proxy support, timeouts, and HTTP/1 + HTTP/2.
# Use this for plain HTTP connections or when TLS is handled elsewhere.
hyper = [
    "dep:hyper",
    "dep:hyper-util",
    "dep:http-body-util",
    "dep:hyper-http-proxy",
    "dep:hyper-timeout",
    "dep:tower",
    "dep:no-proxy"
]

# hyper-tls: Enable HTTPS support using the native TLS library.
# Includes all `hyper` feature dependencies plus native TLS for HTTPS.
# Use this for HTTPS connections when you want to use the platform's native TLS implementation.
native-tls = ["hyper", "dep:native-tls", "dep:hyper-tls", "hyper-http-proxy/native-tls"]

# hyper-rustls-native-roots: Enable HTTPS support using rustls with native root certificates.
hyper-rustls-native-roots = [
    "hyper",
    "dep:hyper-rustls",
    "hyper-rustls/rustls-native-certs",
    "hyper-http-proxy/rustls-tls-native-roots"
]

# hyper-rustls-webpki-roots: Enable HTTPS support using rustls with webpki root certificates.
hyper-rustls-webpki-roots = [
    "hyper",
    "dep:hyper-rustls",
    "hyper-rustls/webpki-roots",
    "hyper-http-proxy/rustls-tls-webpki-roots"
]

[dev-dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }

[package.metadata.docs.rs]
features = ["hyper-rustls-native-roots"]
